--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,5 @@
-/*	Fonts & WebKit animations
+/*	WebKit animations
 ********************************************************************* */
-
-@font-face {
-	font-family: 'TitilliumText22LThin';
-	src: url('../fonts/titilliumtext22l001-webfont.eot');
-	src: local('☺'), url('../fonts/titilliumtext22l001-webfont.woff') format('woff'), url('../fonts/titilliumtext22l001-webfont.ttf') format('truetype'), url('../fonts/titilliumtext22l001-webfont.svg#webfontyHbPbcCT') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 
 @-webkit-keyframes site-fade-in {
 	0% {
@@ -99,9 +91,10 @@ header {
 	}
 
 	header h1 {
-		font: 3.8em/1em "TitilliumText22LThin", "HelveticaNeueNormal-LightAntiqua", "Helvetica Neue Normal Light Antiqua", "Helvetica Neue Normal", Helvetica, Arial, sans-serif;
+		font: 3.8em/1em 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
+		font-weight: 200;
 		text-transform: uppercase;
-		letter-spacing: -.05em;
+		letter-spacing: -.025em;
 		margin: -.15em 0 0 -.1em;
 		color: #fff;
 	}
